@@ -1168,9 +1168,11 @@ xaccAccountSetCommodity (Account * acc, gnc_commodity * com)
   if (gnc_commodity_is_iso(com)) {
     /* compatability hack - Gnucash 1.8 gets currency quotes when a
        non-default currency is assigned to an account.  */
+	gnc_commodity_begin_edit(com);
     gnc_commodity_set_quote_flag(com, TRUE);
     gnc_commodity_set_quote_source(com, 
         gnc_commodity_get_default_quote_source(com));
+	gnc_commodity_commit_edit(com);
   }
   xaccAccountCommitEdit(acc);
 }
